--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "seed": "node --import tsx --env-file=.env.dev src/scripts/seed.ts",
     "test": "NODE_ENV=test jest --coverage",
     "test:watch": "NODE_ENV=test jest --watch",
-    "test:unit": "NODE_ENV=test jest --testPathPattern=unit",
-    "test:integration": "NODE_ENV=test jest --testPathPattern=integration",
+    "test:unit": "NODE_ENV=test jest tests/unit",
+    "test:integration": "NODE_ENV=test jest tests/integration",
     "test:ci": "NODE_ENV=test jest --coverage --ci --maxWorkers=2"
   },
   "dependencies": {
